Fixed overlap

--- a/src/components/Chat/Chat.module.css
+++ b/src/components/Chat/Chat.module.css
@@ -58,7 +58,6 @@
     background-color: white;
     border: 2px solid black;
     border-radius: 1em;
-    margin: 1vmin;
     padding: 0 2vmin;
     flex-grow: 1;
 }
